@@ -56,3 +56,4 @@ Marco Bozzolan
 Paul Mangan
 Roman Trunov
 Julius Plenz
+Denny Lin (KyotoCabinet support)
