@@ -17,6 +17,10 @@
 
 	2016-01-26
 
+	* Apply patch from Denny Lin, with one fix, to add KyotoCabinet
+	  support. To enable, run configure --with-database=kyotocabinet when
+	  building bogofilter.  Thanks!
+
 	* Apply patch from Denny Lin to plug a few memory leaks in the
 	  TokyoCabinet implementation contributed through the bogofilter-dev
 	  mailing list.  Thanks!
